--- a/src/components/Home_page/Research/css/research.css
+++ b/src/components/Home_page/Research/css/research.css
@@ -4,7 +4,7 @@
     background-size: cover;
   }
 
-  .faustina{
+  .faustina-600{
     font-family: 'Faustina Variable', sans-serif;
     font-weight: 600;
   }
