--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.slick-slide > div {
+  margin: 0 10px;
+}
+
+.slick-dots li.slick-active button:before {
+  color: rgb(223, 22, 22) !important;
+}
+.slick-prev:before{
+  content: "🢀";
+  font-family:initial!important;
+  color:rgba(82, 0, 0, 0.979); 
+}
+.slick-next:before {
+    content: "🢂";
+    font-family:initial!important;
+    color:rgba(82, 0, 0, 0.979); 
+}
