--- a/src/components/Home_page/Research/css/research.css
+++ b/src/components/Home_page/Research/css/research.css
@@ -1,21 +1,27 @@
-.research-bg{
-    background-image: url("./assets/Rectangle_121_2.png");
-    background-color: white;
-    background-size: cover;
-  }
+/* Default styles for large screens */
+.research-bg {
+  background-image: url("./assets/Rectangle_121_2.png");
+  background-color: white;
+  background-size: cover;
+}
 
-  .faustina-600{
-    font-family: 'Faustina Variable', sans-serif;
-    font-weight: 600;
-  }
-  
-  .roboto-condensed {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 400;
-  }
-  
-  
-  .inter{
-    font-family: 'Inter Variable', sans-serif;
-    font-weight: 500;
-  }
+.faustina-600 {
+  font-family: 'Faustina Variable', sans-serif;
+  font-weight: 600;
+}
+
+.roboto-condensed {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400;
+}
+
+.inter {
+  font-family: 'Inter Variable', sans-serif;
+  font-weight: 500;
+}
+
+/* Media query for small screens */
+@media (max-width: 767px) {
+  .research-bg {
+      background-color:rgb(247, 149, 149)
+}}
