--- a/src/components/Blogs/components/top-container.module.css
+++ b/src/components/Blogs/components/top-container.module.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 160px;
     width: 100%;
     height: 180px;
     position: relative;
