contact us page improvements

--- a/src/components/Home_page/ContactCollaboration/Form.module.css
+++ b/src/components/Home_page/ContactCollaboration/Form.module.css
@@ -1,6 +1,6 @@
 .formbg {
     background-image: url("./background_style.png");
-    background-color: #F6F6F6;
+    background-color: #dfa43a;
     background-size: cover;
     background-position: 100% center; 
 }
