--- a/src/components/Announcement/Announcement.css
+++ b/src/components/Announcement/Announcement.css
@@ -4,15 +4,21 @@
     overflow: hidden;
     
   }
+  .marquee:hover span {
+    animation-play-state: paused;
+
+  }
   
   .marquee span {
     display: inline-block;
     padding-left: 100%;
-    animation: marquee 15s linear infinite;
+    animation: marquee 30s linear infinite;
+    
   }
   
   .marquee2 span {
     animation-delay: 2.5s;
+    
   }
   
   @keyframes marquee {
