--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
+/* Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #000000 #fce4d6;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #fce4d6;
+    border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background: linear-gradient(to bottom, #bcaaa4, #8d6e63);
+    border-radius: 14px;
+    border: 3px solid #fce4d6;
+}
 @tailwind components;
 @tailwind utilities;
