--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,6 +13,7 @@
     z-index: 1;
     left: -5vw;
     border-color: transparent;
+    transition: all 0.5s ease;
     
   }
   
@@ -25,8 +26,8 @@
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #aa1313;}
+  .dropdown-content a:hover {background-color: #aa1313;transition: all 0.3s ease;}
   
   /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
+  .dropdown:hover .dropdown-content {display: block; transition: all 0.3s ease;}
   
